--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -3,17 +3,27 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#c-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        # Pour notre class User
+        App\Entity\User:
+            # On utilise le meilleur algo présent sur la machine
+            algorithm: auto
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            # Nos users sont detype Entité Doctrine
+            entity:
+                # Dont la classe est celle-ci
+                class: App\Entity\User
+                # La propriété "de connexion/d'affichage"
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
