--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-rooter": "^0.1.2",
     "react-router-dom": "^5.2.0"
   }
 }
