--- a/back/config/packages/twig.yaml
+++ b/back/config/packages/twig.yaml
@@ -1,5 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    # Thème Boostrap pour les forms
+    form_themes: ['bootstrap_5_layout.html.twig']
 
 when@test:
     twig:
