--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -40,5 +40,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/profil, roles: ROLE_USER }
-        # - { path: ^/api/game, roles: ROLE_USER }
-        # - { path: ^/back, roles: ROLE_ADMIN }
+        - { path: ^/api/game, roles: ROLE_USER }
+        - { path: ^/back, roles: ROLE_ADMIN }
