--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -41,4 +41,4 @@ security:
     access_control:
         - { path: ^/profil, roles: ROLE_USER }
         - { path: ^/api/game, roles: ROLE_USER }
-        - { path: ^/3.80.160.120/back, roles: ROLE_ADMIN }
+        - { path: ^/back, roles: ROLE_ADMIN }
