--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
-            # Nos users sont detype Entité Doctrine
+            # Nos users sont de type Entité Doctrine
             entity:
                 # Dont la classe est celle-ci
                 class: App\Entity\User
@@ -40,5 +40,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/profil, roles: ROLE_USER }
-        - { path: ^/api/game, roles: ROLE_USER }
+        # - { path: ^/api/game, roles: ROLE_USER }
         - { path: ^/back, roles: ROLE_ADMIN }
