--- a/back/.env
+++ b/back/.env
@@ -35,3 +35,9 @@ APP_SECRET=9876c3a13fdd4ea4798a5e8dd9ca48ae
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=3e6be699b72d447273de2160528270d5
+###< lexik/jwt-authentication-bundle ###
