--- a/back/composer.json
+++ b/back/composer.json
@@ -13,6 +13,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "fakerphp/faker": "^1.15",
+        "lexik/jwt-authentication-bundle": "^2.12",
+        "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
