--- a/back/config/services.yaml
+++ b/back/config/services.yaml
@@ -20,6 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+
+    # Listener pour l'authentification via JWT Token (permet l'envoi de datas personnalisées en plus du token)
     acme_api.event.authentication_success_listener:
         class: App\EventListener\AuthenticationSuccessListener
         tags:
