--- a/back/config/packages/lexik_jwt_authentication.yaml
+++ b/back/config/packages/lexik_jwt_authentication.yaml
@@ -1,3 +1,4 @@
+# Configuration du chemin des clés SSL (dans .env)
 lexik_jwt_authentication:
     secret_key: '%env(resolve:JWT_SECRET_KEY)%'
     public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
