--- a/back/.gitignore
+++ b/back/.gitignore
@@ -19,5 +19,5 @@
 ###< phpunit/phpunit ###
 
 ###> lexik/jwt-authentication-bundle ###
-/config/jwt/*.pem
+/config/jwt
 ###< lexik/jwt-authentication-bundle ###
