--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -62,8 +62,9 @@ security:
         # - { path: ^/profil, roles: ROLE_USER }
         # - { path: ^/api/game, roles: ROLE_USER }
         # - { path: ^/back, roles: ROLE_ADMIN }
-        # - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/user/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/back,       roles: ROLE_ADMIN }
         # - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
 
