--- a/back/config/services.yaml
+++ b/back/config/services.yaml
@@ -27,5 +27,18 @@ services:
         tags:
             - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccessResponse }
 
+    # Configuration de notre écouteur sur l'entité User
+    App\EventListener\UserListener:
+        tags:
+            -
+                # Ces 3 options sont nécessaires pour que ça fonctionne
+                name: 'doctrine.orm.entity_listener'
+                # Par défaut, le nom de la méthode appelée = nom de l'event
+                event: 'prePersist'
+                entity: 'App\Entity\User'
+            -
+                name: 'doctrine.orm.entity_listener'
+                event: 'preUpdate'
+                entity: 'App\Entity\User'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
