fix-path_logout

--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -46,7 +46,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route            
+                target: app_login            
         main:
             lazy: true
             provider: app_user_provider
