--- a/back/config/init/items.yaml
+++ b/back/config/init/items.yaml
@@ -1,37 +1,152 @@
 # Objets énigmes
 
+# TODO : Description des items
+# TODO : Définition des mots à trouver + nom clé 
+# TODO : Coordonnées X et Y
+# TODO : Chemin réel des images
+
+## Mémo : Contenant un rebus pour le remplissage de l'input final (Bouton mise en prod ou on rentre le chemin/path) 
+
 books:
   x: 22px
   y: 99px
-  picture1: "img/open_book.png"
+  picture1: "images/open_book.png"
   status: 0
   type: clickable
   description1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias distinctio corrupti autem doloremque beatae consequatur voluptatum. Reiciendis, eos. Laudantium voluptatibus nam itaque aliquid cupiditate hic laborum accusantium sed modi!
     Recusandae dolorem rem, officia perspiciatis dignissimos ex nemo quae facilis sunt delectus totam repellendus maxime, soluta dolores nihil aspernatur explicabo libero placeat! Corrupti quia expedita tenetur alias officiis, dolor eum?
+
+## Indice mémo : RTFM ===> Le livre est une doc indigeste qu'il faut lire pour voir un mot sauter aux yeux (intrus)
 
 labyrinth:
   x: 22px
   y: 99px
-  picture1: "img/big_labyrinth.png"
+  picture1: "images/big_labyrinth.png"
   status: 0
   type: clickable
   description1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias distinctio corrupti autem doloremque beatae consequatur voluptatum. Reiciendis, eos. Laudantium voluptatibus nam itaque aliquid cupiditate hic laborum accusantium sed modi!
     Recusandae dolorem rem, officia perspiciatis dignissimos ex nemo quae facilis sunt delectus totam repellendus maxime, soluta dolores nihil aspernatur explicabo libero placeat! Corrupti quia expedita tenetur alias officiis, dolor eum?
+
+## Le bon chemin est celui qui comporte autant de mots/objets que le nombre de merveilles du monde ===> Résultat : Mot à la sortie du bon chemin
 
 kaamelott:
   x: 22px
   y: 99px
-  picture1: "img/big_kaamelott.png"
+  picture1: "images/big_kaamelott.png"
   status: 0
   type: clickable
   description1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias distinctio corrupti autem doloremque beatae consequatur voluptatum. Reiciendis, eos. Laudantium voluptatibus nam itaque aliquid cupiditate hic laborum accusantium sed modi!
     Recusandae dolorem rem, officia perspiciatis dignissimos ex nemo quae facilis sunt delectus totam repellendus maxime, soluta dolores nihil aspernatur explicabo libero placeat! Corrupti quia expedita tenetur alias officiis, dolor eum?
 
+## Description à l'image qui indique ce qu'il faut chercher d'après l'info du mémo ===> Résultat : Nom d'un personnage manquant ou région
+
 carlin:
   x: 22px
   y: 99px
-  picture1: "img/big_carlin.png"
+  picture1: "images/big_carlin.png"
   status: 0
   type: clickable
   description1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias distinctio corrupti autem doloremque beatae consequatur voluptatum. Reiciendis, eos. Laudantium voluptatibus nam itaque aliquid cupiditate hic laborum accusantium sed modi!
     Recusandae dolorem rem, officia perspiciatis dignissimos ex nemo quae facilis sunt delectus totam repellendus maxime, soluta dolores nihil aspernatur explicabo libero placeat! Corrupti quia expedita tenetur alias officiis, dolor eum?
+
+## Signature sur photo ou collier/médaille écrit à la mano Enigme ===> sur le mémo qui induit à cliquer sur tous les animaux ===> Résultat : Nom du carlin
+
+code:
+  x: 22px
+  y: 99px
+  picture1: "images/big_code.png"
+  status: 0
+  type: clickable
+  description1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias distinctio corrupti autem doloremque beatae consequatur voluptatum. Reiciendis, eos. Laudantium voluptatibus nam itaque aliquid cupiditate hic laborum accusantium sed modi!
+    Recusandae dolorem rem, officia perspiciatis dignissimos ex nemo quae facilis sunt delectus totam repellendus maxime, soluta dolores nihil aspernatur explicabo libero placeat! Corrupti quia expedita tenetur alias officiis, dolor eum?
+
+## Indice mémo : Mon 5ème cause des bugs (mot ou pas, indice ou pas), enigme code complexe avec un mots qui ressort et qui casse tout Résultat : Mot qui fait bugguer
+
+drawer:
+  x: 22px
+  y: 99px
+  picture1: "images/big_drawer.png"
+  status: 0
+  type: clickable
+  description1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestias distinctio corrupti autem doloremque beatae consequatur voluptatum. Reiciendis, eos. Laudantium voluptatibus nam itaque aliquid cupiditate hic laborum accusantium sed modi!
+    Recusandae dolorem rem, officia perspiciatis dignissimos ex nemo quae facilis sunt delectus totam repellendus maxime, soluta dolores nihil aspernatur explicabo libero placeat! Corrupti quia expedita tenetur alias officiis, dolor eum?
+
+## Indice mémo : Mon 6ème est la clé .pem, enigme "ou est charlie" dans le tiroir en méga-bordel, la clé à son nom marqué dessus // Résultat : Nom de la clé
+
+## Objet enigme finale (champ input)
+
+button:
+  x: 22px
+  y: 99px
+  # picture1: "images/big_drawer.png"
+  status: 0
+  type: inputable
+  answer: /xxx/xxx/xxx/xxx/xxx/yyy.pem
+
+## Objets Infos
+
+memo_rebus:
+  x: 22px
+  y: 99px
+  picture1: "images/big_memo_rebus.png"
+  status: 0
+  type: clickable
+  description1: Charade indiquant le déroulement pour trouver le chemin absolu (5 mots + 1 nom.pem). Parfois l'énigme est sur le mémo, parfois le mémo indique ou est l'énigme.
+
+memo:
+  x: 22px
+  y: 99px
+  picture1: "images/memo.png"
+  status: 0
+  type: clickable
+  description1: Des conneries humouristiques sur la vide des dev' !
+
+duck:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: La méthode du canard en plastique (Paul le canard............)
+
+rabbit:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: Roger le lapin (+ Bla bla roger rabbit)
+
+cat:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: Descriptif chat japonais
+
+mouse:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: Blague "Il est chelou ce chat non ???"
+
+cup:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: Trophé du non-buggeur (de l'oeil du tigre du débugguage)
+
+controller:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: "Y'a un projet à mettre en prod c'est pas l'heure de jouer !"
+  
+warhammer:
+  x: 22px
+  y: 99px
+  status: 0
+  type: clickable
+  description1: "Une de mes passions c'est d'en acheter plein et de les mettre dans un tiroir sans les peindre ><"
+
