--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-redux": "^7.2.4",
     "react-rooter": "^0.1.2",
     "react-router-dom": "^5.2.0",
+    "react-timer-hook": "^3.0.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9"
   }
