--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-rooter": "^0.1.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.1",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "styled-jsx": "^4.0.0"
   }
 }
