feat/items.yaml

--- a/back/config/init/items.yaml
+++ b/back/config/init/items.yaml
@@ -52,7 +52,7 @@ kaamelott:
 carlin:
   name: carlin
   left: 42.5em #(left)
-  top: 16.5 #(top)
+  top: 16.5em #(top)
   width: 9em
   height: 8em
   picture1: "http://3.238.70.10/images/carlin.svg"
