--- a/back/.env
+++ b/back/.env
@@ -43,5 +43,5 @@ JWT_PASSPHRASE=4e4cc64a758592583f21a04c2dc8a077
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://(*|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
